# ---------------

./: README.md
bookstore-client-main/: README.md  package-lock.json  package.json
bookstore-client-main/src/: App.js  index.js
bookstore-client-main/src/api/: axiosConfig.js
bookstore-client-main/src/components/: AdminPanel.js  BookDetail.js  BookList.js  Cart.js  Checkout.js  Header.js  HomePage.js  Login.js  OrderList.js  Register.js
bookstore-client-main/src/context/: AuthProvider.js
bookstore-server-main/: .gitignore  README.md  pyproject.toml
bookstore-server-main/api/: models.py  permissions.py  serializers.py  urls.py  views.py
bookstore-server-main/api/management/commands/: populate_db.py
bookstore-server-main/api/migrations/: 0001_initial.py  0002_cart_session_key.py  0003_alter_cart_user.py  0004_remove_cartbook_cart_remove_cartbook_book_cartitem_and_more.py  0005_alter_cartitem_unique_together_cartitem_session_key_and_more.py  0006_book_isbn_book_preview_file.py
bookstore-server-main/server/: settings.py  urls.py
